# border-fiber-ids

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  PRODUCT.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: critic.md  litreview.md  ml.md  reporter.md  signals.md
configs/: baseline.yaml
docs/literature/: bibliography.bib
src/: __init__.py
src/evaluation/: __init__.py
src/features/: __init__.py
src/io/: __init__.py
src/localization/: __init__.py
src/models/: __init__.py
src/pipeline/: __init__.py
src/preprocessing/: __init__.py
src/training/: __init__.py
tests/: __init__.py
